<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.BmiActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:orientation="vertical"
                android:gravity="start">
                <TextView
                    android:id="@+id/bio_name"
                    android:paddingTop="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/colorPrimary"
                    android:textSize="@dimen/medium_large_font_size"
                    android:gravity="center" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">
                    <ImageView
                        android:id="@+id/bio_img"
                        android:padding="8dp"
                        android:layout_width="@dimen/profile_img"
                        android:layout_height="@dimen/profile_img"
                        android:src="@drawable/profile_placeholder"
                        android:scaleType="centerCrop" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp"
                        >
                        <TextView
                            android:id="@+id/bio_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/medium_small_font_size"
                            android:gravity="left"
                            />
                        <TextView
                            android:id="@+id/bio_sex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textSize="@dimen/medium_small_font_size"
                            android:gravity="left"
                            />
                        <TextView
                            android:id="@+id/bio_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textSize="@dimen/medium_small_font_size"
                            android:gravity="left"
                            />
                        <TextView
                            android:id="@+id/bio_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textSize="@dimen/medium_small_font_size"
                            android:gravity="left"
                            />
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:layout_marginTop="32dp"
                    android:id="@+id/edit_bio_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_font_size"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/holo_blue_light"
                    android:text="@string/edit_profile" />
            </LinearLayout>
        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--NAVIGATION VIEW NEEDS TO REMAIN LAST ELEMENT-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_drawer_header"
        app:menu="@menu/nav_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
