<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="start">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_large_font_size"
                android:text="@string/sign_up"
                android:gravity="center"
                android:textColor="@color/holo_blue_light"
                />
            <EditText
                android:id="@+id/name_sign_up"
                android:paddingTop="16dp"
                android:textSize="@dimen/small_font_size"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:backgroundTint="?android:attr/colorPrimary"
                android:autofillHints="@string/enter_name"
                />
            <EditText
                android:id="@+id/password_sign_up"
                android:paddingTop="16dp"
                android:textSize="@dimen/small_font_size"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:backgroundTint="?android:attr/colorPrimary"
                android:autofillHints="@string/enter_password"
                />
            <EditText
                android:id="@+id/confirm_password_sign_up"
                android:paddingTop="16dp"
                android:textSize="@dimen/small_font_size"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?android:attr/colorPrimary"
                android:hint="@string/confirm_password"
                android:autofillHints="@string/confirm_password"
                />
            <EditText
                android:id="@+id/bio_form_age"
                android:paddingTop="16dp"
                android:textSize="@dimen/small_font_size"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_age"
                android:backgroundTint="?android:attr/colorPrimary"
                android:autofillHints="@string/confirm_password"
                android:focusable="false"
                />

            <fragment android:name="com.example.project.activity.bio.BioFormFragment"
                android:id="@+id/bio_form_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>