<resources>
    <string name="app_name">GetFit()</string>
    <string name="navigation_drawer_open">GetFit()</string>
    <string name="navigation_drawer_close">GetFit()</string>
    <string name="home">Home</string>
    <string name="weather">Weather</string>
    <string name="hiking">Hiking</string>
    <string name="redirect_to_weather">redirect to weather</string>
    <string name="take_picture">Take Picture</string>
    <string name="find_hike">Find Hike</string>
    <string name="bio">Bio</string>
    <string name="night_mode">Toggle Night Mode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_name">Full Name:</string>
    <string name="enter_password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_age">Enter DOB:</string>
    <string name="open_calendar">Open Calendar</string>
    <string name="enter_sex">Sex:</string>
    <string name="enter_height">Height: </string>
    <string name="enter_feet">ft.</string>
    <string name="enter_inches">in.</string>
    <string name="weight_label">Weight: </string>
    <string name="enter_city">City? (optional)</string>
    <string name="enter_country">Country? (optional)</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
        <item>Non-binary</item>
    </string-array>

    <string-array name="feet_array">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="inch_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string-array name="age_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_bmi_calculator">BmiCalculator</string>
    <string name="bmi">BMI</string>
    <string name="title_activity_calorie">CalorieActivity</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="what_if_you_weighed">What if your weight changed by</string>
    <string name="default_bmi">0.0</string>
    <string name="your_bmi_is">Your BMI is</string>
    <string name="weight_goal">Weight Goal</string>
    <string name="activity_level">Activity Level</string>
    <string name="value">Value</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="calories">Calories</string>/>
</resources>
