...
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_font_size"
                android:textColor="?android:attr/colorPrimary"
                android:text="@string/enter_sex"
                />
            <Spinner
                android:id="@+id/bio_form_sex"
                android:textSize="@dimen/medium_small_font_size"
                android:paddingTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
...
                    android:textSize="@dimen/small_medium_font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <SeekBar
                android:id="@+id/bio_form_weight"
                android:max="380"
                android:min="80"
                android:progress="150"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbTint="?android:attr/colorPrimary"
                android:progressTint="?android:attr/colorPrimary"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/bio_form_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/holo_blue_light"
        android:text="@string/submit"
        />
...
